Adds a suite of formatters and linters
isort: sort imports
black: reformat codebase
pydocstyle: check doc strings
mypy: check type hinting
pyflakes: error checker
pylint: error checker / style checker
pytest: run tests

--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,21 @@
 envlist = py37
 
 [testenv]
-deps = 
-    pytest
-    mypy
+deps =
     -rrequirements.txt
+    black
+    isort
+    mypy
+    pydocstyle
+    pyflakes
+    pylint
+    pytest
+
 commands =
-    pytest emell
-    mypy emell
+    isort -q -rc emell
+    black -q emell
+    pydocstyle emell
+    mypy --strict emell
+    pyflakes emell
+    pylint emell
+    pytest -q emell
